--- a/_includes/education.html
+++ b/_includes/education.html
@@ -2,22 +2,22 @@
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>MSc in Communication Engineering</h1>
+            <span>RWTH Aachen University, Germany</span>
+            <!-- <span><address>Glasgow, UK</address><time>2011 to 2012</time></span> -->
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>Master Thesis: Interference Management in Wireless Sensor Networks for Avionics.</em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>BE in Electronics and Communication Engineering</h1>
+            <span>PES Institute of Technology, Bangalore</span>
+           <!--  <span><address>London, UK</address><time>2007 to 2011</time></span> -->
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+            <em>Bachelor Thesis: Channel Estimation for OFDM system in presence of Impairments.</em>
         </p>
     </article>
 </section>
