--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,20 +2,19 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1>DSP Engineer</h1>
+            <span><address>Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
+        <p>Working on LTE L1-L2 (FAPI) interface. </p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
+            <h1>iOS DSP Engineer</h1>
+            <span><address>Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
+        <p>Tools: Matlab, C/C++
+● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.
+● Development of new low-complexity methods for detection and synchronization that can specifically handle the large range of Doppler impairments.</p>
     </article>
     <article>
         <header>
