--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -12,8 +12,8 @@
             <h1>iOS DSP Engineer</h1>
             <span><address>Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
-        <p>Tools: Matlab, C/C++
-● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.
+        <p>Tools: Matlab, C/C++ </p>
+<p> ● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.
 ● Development of new low-complexity methods for detection and synchronization that can specifically handle the large range of Doppler impairments.</p>
     </article>
     <article>
