--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -5,7 +5,7 @@
             <h1>DSP Engineer</h1>
             <span><address>Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
-        <p>Working on LTE L1-L2 (FAPI) interface. </p>
+        <p>● Working on LTE L1-L2 (FAPI) interface. </p>
     </article>
     <article>
         <header>
@@ -13,31 +13,26 @@
             <span><address>Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
         <p>Tools: Matlab, C/C++ </p>
-<p> ● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.
-● Development of new low-complexity methods for detection and synchronization that can specifically handle the large range of Doppler impairments.</p>
+<p> ● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.</p>
+<p> ● Development of new low-complexity methods for detection and synchronization that can specifically handle the large range of Doppler impairments.</p>
     </article>
     <article>
         <header>
-            <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
+            <h1>Master Thesis: Interference Management in Wireless Sensor Networks for Avionics</h1>
+            <span><address>Hamburg, Germany</address><time>Nov-2019 to April-2020</time></span>
         </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
+        <p>Tool: Matlab</p>
+<p> ● Proposed methods to estimate channel response in 802.11ax (WiFi6) with the presence of FMCW radar interference.</p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
+            <h1>Intern: 5G Wireless Systems Prototyping</h1>
+            <span><address>Dresden, Germany</address><time>April-Sep 2019</time></span>
         </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
+        <p>Tools: Network Simulator, C++, gdb, eclipse, linux, git, labview</p>
+<p> ● Added missing features to open source 5G protocol stack. </p>
+<p> ● Good understanding of 4G/5G technology principles & communication theory </p>
+<p> ● Debugging large C++ files/protocol stacks using debuggers/log analysis.</p>
     </article>
-    <article>
-        <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
-        </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
-        </p>
-    </article>
+    
 </section>
