--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -9,7 +9,7 @@
     </article>
     <article>
         <header>
-            <h1>iOS DSP Engineer</h1>
+            <h1>DSP Engineer</h1>
             <span><address>Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
         <p>Tools: Matlab, C/C++ </p>
