--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,7 +6,8 @@
         </header> -->
         <p>
             <!-- <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i> -->
-            &nbsp;&nbsp;<em>C/C++ & MATLAB</em>
+            <!--&nbsp;&nbsp;-->
+            <em>C/C++ & MATLAB</em>
         <p>
            <!-- <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i> -->
             &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
