--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -7,14 +7,21 @@
         <p>
             <!-- <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i> -->
             <!--&nbsp;&nbsp;-->
-            <em>C/C++ & MATLAB</em>
+            <em>Programming skills: C/C++ & MATLAB</em>
         <p>
            <!-- <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i> -->
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
+           <!-- &nbsp;&nbsp;-->
+            <em>Tools: NS-3, Wireshark, LabView, GDB, Eclipse</em>
         </p>
         <p>
           <!--  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i> -->
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+           <!--  &nbsp;&nbsp;-->
+            <em>Productivity: MS Office, Git tools, LaTeX, Linux, Shell scripting</em>
+        </p>
+         <p>
+          <!--  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i> -->
+           <!--  &nbsp;&nbsp;-->
+            <em>Technologies: 5G (NR), 4G (LTE), 802.11ax (Link/System level simulations)</em>
         </p>
     </article>
 </section>
