--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,9 @@
 <section class="thirteen columns">
-    <h1>Hobbies</h1>
+    <h1>Extra Cirricular</h1>
     <article>
-        <p>Music, Movies, Tennis, Travelling, Cooking.</p>
+        <p>-Sports (badminton, hiking)</p>
+<p>-Books, Podcasts, Finance/Investing</p>
+<p>-Cooking, travelling, meeting people</p>
+<p>-Exploring culture, food, history.</p>
     </article>
 </section>
