--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,21 +1,12 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+    <h1>Other Achievements</h1>
     <article>
-        <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
-        </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
-        </p>
-    </article>
-    <article>
-        <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
-        </p>
+          • Scored 97.2 percentile among 150,000 students in GATE-2016 (All India Engineer Entrance Exam for Masters Programs in India)  </p>
+<p>• Scored 99.4 percentile among 120,000 students in K-CET 2012(Engineering Entrance Exam for
+Bachelor Program in Karnataka state)  </p>
+<p>• Got gold badge for "Famous Question" in ’dsp.stackexchange.com’ for the Question "Difference
+between DC and Zero frequency component"  </p>
+<p>• Gave a talk on Digital Pre-Distortion(DPD) in OFDM systems at National Instruments Dresden. </p>
     </article>
 </section>
