--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,7 +43,7 @@
         </p>
         <p>
             <a href="{{ site.email_full }}">{{ site.email }}</a><br/>
-            <a href="https://https://www.linkedin.com//{{ site.linkedin }}"><i class="fa fa-linkedin"></i> linkedin</a>
+            <a href="https://https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i> linkedin</a>
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
            <!-- <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a> -->
         </p>
