--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,19 +30,19 @@
         <p>
             <a href="{{ site.tel_full }}">{{ site.tel }}</a>
         </p>
-        <address>
+         <!-- <address>
             <a href="{{ site.google_maps }}">
                 {{ site.address.street }}<br/>
                 {{ site.address.postcode }}<br/>
                 {{ site.address.city }}<br/>
                 {{ site.address.country }}
             </a>
-        </address>
+        </address> -->
         <p>
             <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
         </p>
         <p>
-            <a href="{{ site.email_full }}">{{ site.email }}</a><br/>
+            <!-- <a href="{{ site.email_full }}">{{ site.email }}</a><br/> -->
             <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i> LinkedIn</a>
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
            <!-- <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a> -->
