--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -42,7 +42,7 @@
             <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
         </p>
         <p>
-            <a href="mailto:myemailaddress@gmail.com"><i class="fa fa-envelope"></i> 
+            <a href="mailto:chinmaybhat94@gmail.com"><i class="fa fa-envelope"></i> 
              <!--  <a href="{{ site.email_full }}">{{ site.email }}<i class="fa fa-envelope"></i> -->
             <!--  <a href="https://www.gmail.com/{{ site.gmail }}"><i class="fa fa-envelope" aria-hidden="true"></i> -->
             <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i> </a>
