--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,8 +43,7 @@
         </p>
         <p>
             <a href="mailto:chinmaybhat94@gmail.com"><i class="fa fa-envelope"></i> 
-             <!--  <a href="{{ site.email_full }}">{{ site.email }}<i class="fa fa-envelope"></i> -->
-            <!--  <a href="https://www.gmail.com/{{ site.gmail }}"><i class="fa fa-envelope" aria-hidden="true"></i> -->
+            <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook"></i> </a>
             <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i> </a>
             
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
