--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -42,9 +42,9 @@
             <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
         </p>
         <p>
-            <a href="mailto:chinmaybhat94@gmail.com"><i class="fa fa-envelope fa-lg"></i>  </a>
-            <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook fa-lg"></i>  </a>
-            <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin fa-lg"></i>  </a>
+            <a href="mailto:chinmaybhat94@gmail.com"><i class="fa fa-envelope fa-2x"></i>  </a>
+            <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook fa-2x"></i>  </a>
+            <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin fa-2x"></i>  </a>
             
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
            <!-- <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a> -->
