--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,7 +4,7 @@
         <header>
             <h1>MSc in Communication Engineering</h1>
             <span>RWTH Aachen University, Germany</span>
-            <!-- <span><address>Glasgow, UK</address><time>2011 to 2012</time></span> -->
+            <span><time>2017 to 2020</time></span> 
         </header>
         <p>
             <em>Master Thesis: Interference Management in Wireless Sensor Networks for Avionics.</em>
@@ -13,8 +13,8 @@
     <article>
         <header>
             <h1>BE in Electronics and Communication Engineering</h1>
-            <span>PES Institute of Technology, Bangalore</span>
-           <!--  <span><address>London, UK</address><time>2007 to 2011</time></span> -->
+            <span>PES Institute of Technology, Bangalore, India</span>
+           <span><time>2012 to 2016</time></span> 
         </header>
         <p>
             <em>Bachelor Thesis: Channel Estimation for OFDM system in presence of Impairments.</em>
