--- a/static/css/base.css
+++ b/static/css/base.css
@@ -120,8 +120,10 @@
 ================================================== */
 
 	img.scale-with-grid {
-		max-width: 100%;
-		height: auto; }
+		max-width: 200%; 
+		height: 400; }
+		/*max-width: 100%; 
+		height: auto; }*/
 
 
 /* #Buttons
