--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,15 +1,15 @@
 <section class="thirteen columns">
-    <h1>Employment</h1>
+    <h1>Work Experience</h1>
     <article>
         <header>
-            <h1>DSP Engineer</h1>
+            <h1>Signal Processing Engineer</h1>
             <span><address>Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
         <p>● Working on LTE L1-L2 (FAPI) interface. </p>
     </article>
     <article>
         <header>
-            <h1>DSP Engineer</h1>
+            <h1>Signal Processing Engineer</h1>
             <span><address>Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
         <p>Tools: Matlab, C/C++ </p>
