--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -25,7 +25,9 @@
 <body>
 <div class="container">
     <header class="three columns">
-        <img src="{{ site.baseurl }}static/img/profile.jpg" class="me">
+        <!-- <img src="{{ site.baseurl }}static/img/profile.jpg" class="me"> -->
+        <img src="{{ site.baseurl }}static/img/profile.jpg" width="400" 
+     height="500" />
         <h1>{{ site.name }}</h1>
         <p>
             <a href="{{ site.tel_full }}">{{ site.tel }}</a>
