--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,4 +1,4 @@
-<section class="thirteen columns">
+<! –– <section class="thirteen columns">
     <h1>Extra Cirricular</h1>
     <article>
         <p>-Sports (badminton, hiking)</p>
@@ -6,4 +6,4 @@
 <p>-Cooking, travelling, meeting people</p>
 <p>-Exploring culture, food, history.</p>
     </article>
-</section>
+</section>––>
