--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,9 +1,9 @@
-<! –– <section class="thirteen columns">
-    <h1>Extra Cirricular</h1>
+<section class="thirteen columns">
+  <! ––   <h1>Extra Cirricular</h1>
     <article>
         <p>-Sports (badminton, hiking)</p>
 <p>-Books, Podcasts, Finance/Investing</p>
 <p>-Cooking, travelling, meeting people</p>
 <p>-Exploring culture, food, history.</p>
-    </article>
-</section>––>
+    </article>––>
+</section>
