--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,11 +2,11 @@
     <h1>Other Achievements</h1>
     <article>
         <p>
-          • Scored 97.2 percentile among 150,000 students in GATE-2016 (All India Engineer Entrance Exam for Masters Programs in India)  </p>
-<p>• Scored 99.4 percentile among 120,000 students in K-CET 2012(Engineering Entrance Exam for
+          ● Scored 97.2 percentile among 150,000 students in GATE-2016 (All India Engineer Entrance Exam for Masters Programs in India)  </p>
+<p>● Scored 99.4 percentile among 120,000 students in K-CET 2012 (Engineering Entrance Exam for
 Bachelor Program in Karnataka state)  </p>
-<p>• Got gold badge for "Famous Question" in ’dsp.stackexchange.com’ for the Question "Difference
+<p>● Got gold badge for "Famous Question" in ’dsp.stackexchange.com’ for the Question "Difference
 between DC and Zero frequency component"  </p>
-<p>• Gave a talk on Digital Pre-Distortion(DPD) in OFDM systems at National Instruments Dresden. </p>
+<p>● Gave a talk on Digital Pre-Distortion(DPD) in OFDM systems at National Instruments Dresden. </p>
     </article>
 </section>
