--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -3,7 +3,7 @@
     <article>
         <header>
             <h1>Signal Processing Engineer</h1>
-            <span><address>Commagility Ltd, Duisburg, Germany</address><time>April-2021 to Present</time></span>
+            <span><address><strong> Commagility Ltd</strong>, Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
         <p>● Working on LTE L1-L2 (FAPI) interface. </p>
     </article>
