--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -10,7 +10,7 @@
     <article>
         <header>
             <h1>Signal Processing Engineer</h1>
-            <span><address>OQ Technology, Luxembourg</address><time>July 2020 - March 2021</time></span>
+            <span><address><strong>OQ Technology</strong>, Luxembourg</address><time>July 2020 - March 2021</time></span>
         </header>
         <p>Tools: Matlab, C/C++ </p>
 <p> ● Design, simulation, and calibration of full transceiver chain for earth-to-LEO satellite communication links.</p>
@@ -19,7 +19,7 @@
     <article>
         <header>
             <h1>Master Thesis: Interference Management in Wireless Sensor Networks for Avionics</h1>
-            <span><address>Airbus Defence &Space, Hamburg, Germany</address><time>Nov-2019 to April-2020</time></span>
+            <span><address><strong>Airbus Defence & Space</strong>, Hamburg, Germany</address><time>Nov-2019 to April-2020</time></span>
         </header>
         <p>Tool: Matlab</p>
 <p> ● Proposed methods to estimate channel response in 802.11ax (WiFi6) with the presence of FMCW radar interference.</p>
@@ -27,7 +27,7 @@
     <article>
         <header>
             <h1>Intern: 5G Wireless Systems Prototyping</h1>
-            <span><address>National Instruments Dresden, Germany</address><time>April-Sep 2019</time></span>
+            <span><address><strong>National Instruments Dresden</strong>, Germany</address><time>April-Sep 2019</time></span>
         </header>
         <p>Tools: Network Simulator, C++, gdb, eclipse, linux, git, labview</p>
 <p> ● Added missing features to open source 5G protocol stack. </p>
