--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -27,7 +27,7 @@
     <article>
         <header>
             <h1>Intern: 5G Wireless Systems Prototyping</h1>
-            <span><address><strong>National Instruments Dresden</strong>, Germany</address><time>April-Sep 2019</time></span>
+            <span><address><strong>National Instruments</strong>, Dresden, Germany</address><time>April-Sep 2019</time></span>
         </header>
         <p>Tools: Network Simulator, C++, gdb, eclipse, linux, git, labview</p>
 <p> ● Added missing features to open source 5G protocol stack. </p>
