--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -19,7 +19,7 @@
     <article>
         <header>
             <h1>Master Thesis: Interference Management in Wireless Sensor Networks for Avionics</h1>
-            <span><address><strong>Airbus Defence & Space</strong>, Hamburg, Germany</address><time>Nov-2019 to April-2020</time></span>
+            <span><address><strong>Airbus Defence & Space</strong>, Hamburg, Germany</address><time>6 months</time></span>
         </header>
         <p>Tool: Matlab</p>
 <p> ● Proposed methods to estimate channel response in 802.11ax (WiFi6) with the presence of FMCW radar interference.</p>
@@ -27,7 +27,7 @@
     <article>
         <header>
             <h1>Intern: 5G Wireless Systems Prototyping</h1>
-            <span><address><strong>National Instruments</strong>, Dresden, Germany</address><time>April-Sep 2019</time></span>
+            <span><address><strong>National Instruments</strong>, Dresden, Germany</address><time>6 months</time></span>
         </header>
         <p>Tools: Network Simulator, C++, gdb, eclipse, linux, git, labview</p>
 <p> ● Added missing features to open source 5G protocol stack. </p>
