--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,7 +12,7 @@
          <p>
           <!--  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i> -->
            <!--  &nbsp;&nbsp;-->
-            <em>Technologies: 5G (NR), 4G (LTE), 802.11ax (Link/System level simulations)</em>
+            <em>Technologies: 5G (NR), 4G (LTE), 802.11ax (WiFi)</em>
         </p>
     </article>
 </section>
