--- a/_includes/education.html
+++ b/_includes/education.html
@@ -3,7 +3,7 @@
     <article>
         <header>
             <h1>MSc in Communication Engineering</h1>
-            <span>RWTH Aachen University</span>
+            <span><stable>RWTH Aachen University</stable></span>
             <span><address>Aachen, Germany</address><time>2017 to 2020</time></span> 
         </header>
         <p>
@@ -13,7 +13,7 @@
     <article>
         <header>
             <h1>BE in Electronics and Communication Engineering</h1>
-            <span>PES Institute of Technology</span>
+            <span><stable>PES Institute of Technology</stable></span>
            <span><address>Bangalore, India</address><time>2012 to 2016</time></span> 
         </header>
         <p>
