--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -5,7 +5,7 @@
             <h1>Signal Processing Engineer</h1>
             <span><address><strong> Commagility Ltd</strong>, Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
-        <p>● Working on LTE L1-L2 (FAPI) interface. </p>
+        <p>● Implementing DSP algorithms/5G PHY on ARM/x86 based platforms. </p>
     </article>
     <article>
         <header>
