--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -46,7 +46,7 @@
         <p>
   <!--    <a href="mailto:chinmaybhat94@gmail.com"><i class="fa fa-envelope fa-4x"></i>  </a>-->
   <!--    <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook fa-4x"></i>  </a> -->
-            <a href="https://chinmaybhat99.substack.com/{{ site.substack }}"><i class="fa fa-substack fa-4x"></i>  </a>
+            <a href="https://chinmaybhat99.substack.com/"><i class="fa fa-substack fa-4x"></i>  </a>
             <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin fa-4x"></i>  </a>
             
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
