--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -48,6 +48,7 @@
   <!--    <a href="https://www.facebook.com/{{ site.facebook }}"><i class="fa fa-facebook fa-4x"></i>  </a> -->
             <a href="https://chinmaybhat99.substack.com/"><i class="fa fa-bookmark fa-4x"></i>  </a>
             <a href="https://www.linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin fa-4x"></i>  </a>
+            <iframe src="https://chinmaybhat99.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
             
             <!--  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> -->
            <!-- <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a> -->
