--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -5,7 +5,10 @@
             <h1>Signal Processing Engineer</h1>
             <span><address><strong> Commagility Ltd</strong>, Duisburg, Germany</address><time>April-2021 to Present</time></span>
         </header>
-        <p>● Implementing 5G PHY on ARM/x86 based platforms. </p>
+        <p> Skills : C/C++ · Software Development · 5G PHY/Protocol Stack · ARM/x86 · Bash/Python Scripting </p>
+        <p> ● Implementing 5G PHY/Protocol Stack features based on 3GPP. </p>
+        <p> ● Debugging large C/C++ files using debuggers.  </p>
+        <p> ● Reading and understanding 3GPP rel 15/16. </p>
     </article>
     <article>
         <header>
