--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,6 +17,8 @@ Technologies: 4G (LTE), 5G (NR), 802.11ax (Link/System level simulations)
 
 Reach me at:
 chinmaybhat94@gmail.com
+        
+Personal Blog - Summarizing Ideas on Tech, Psychology -> chinmaybhat99.substack.com
       
     </article>
 </section>
