--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -26,7 +26,7 @@
 <div class="container">
     <header class="three columns">
         <!-- <img src="{{ site.baseurl }}static/img/profile.jpg" class="me"> -->
-        <img src="{{ site.baseurl }}static/img/new_profile.jpeg" width="160" 
+        <img src="{{ site.baseurl }}static/git_profile.jpeg" width="160" 
      height="200" />
         <h1>{{ site.name }}</h1>
         <p>
